--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
+  body {
+    @apply bg-gray-100;
+  }
+
   .video-container {
     position: relative;
     padding-bottom: 56.25%;
